Assignment 3b, 4b, and 4c added

--- a/Activity2B/scatter_plot_mutations.ipynb
+++ b/Activity2B/scatter_plot_mutations.ipynb
@@ -616,7 +616,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f7efbab2de0>"
+       "<matplotlib.collections.PathCollection at 0x7b25ad4fcef0>"
       ]
      },
      "execution_count": 2,
@@ -660,7 +660,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f7ef83ff980>"
+       "<matplotlib.collections.PathCollection at 0x7b25a9c29ee0>"
       ]
      },
      "execution_count": 3,
