Updated 4C and Added 5B

--- a/Activity4C/assignment4c.ipynb
+++ b/Activity4C/assignment4c.ipynb
@@ -1170,15 +1170,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Top 10 features in Group A (ranked by “TP – FP”) and their corresponding “TP – FP” values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Group A TP - FP for DOCK3_GRCh37_3:51417604-51417604_Frame-Shift-Del_DEL_C-C--\n"
+      "Group A (from DOCK3_GRCh37_3:51417604-51417604_Frame-Shift-Del_DEL_C-C--) TP - FP\n"
      ]
     },
     {
@@ -1275,7 +1282,7 @@
        "9  RPL22_GRCh37_1:6257785-6257785_Frame-Shift-Del...        4"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,15 +1316,22 @@
     "group_a_tp_fp_chart = pd.DataFrame(columns=['Mutation', 'TP - FP'])\n",
     "group_a_tp_fp_chart['Mutation'] = [x[0] for x in group_a_mutation_data]\n",
     "group_a_tp_fp_chart['TP - FP'] = [x[1] - x[2] for x in group_a_mutation_data]\n",
-    "group_a_tp_fp_chart.name = f\"Group A TP - FP for {most_useful_mutation}\"\n",
+    "group_a_tp_fp_chart.name = f\"Group A (from {most_useful_mutation}) TP - FP\"\n",
     "\n",
     "print(group_a_tp_fp_chart.name)\n",
     "group_a_tp_fp_chart.head(10)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pick the most useful mutation (the one with the highest TP - FP)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1336,8 +1350,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make a confusion matrix for top feature in Group A"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1414,7 @@
        "1          5  7"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,8 +1441,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sort samples from Group A into Group A1 and A0"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1535,7 @@
        "6         C47             "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,15 +1565,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Top 10 features in Group B (ranked by “TP – FP”) and their corresponding “TP – FP” values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Group A TP - FP for DOCK3_GRCh37_3:51417604-51417604_Frame-Shift-Del_DEL_C-C--\n"
+      "Group B from (DOCK3_GRCh37_3:51417604-51417604_Frame-Shift-Del_DEL_C-C--) TP - FP\n"
      ]
     },
     {
@@ -1642,7 +1677,7 @@
        "9   KDM1B_GRCh37_6:18222307-18222307_3'UTR_DEL_A-A--        4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1676,15 +1711,22 @@
     "group_b_tp_fp_chart = pd.DataFrame(columns=['Mutation', 'TP - FP'])\n",
     "group_b_tp_fp_chart['Mutation'] = [x[0] for x in group_b_mutation_data]\n",
     "group_b_tp_fp_chart['TP - FP'] = [x[1] - x[2] for x in group_b_mutation_data]\n",
-    "group_b_tp_fp_chart.name = f\"Group A TP - FP for {most_useful_mutation}\"\n",
+    "group_b_tp_fp_chart.name = f\"Group B from ({most_useful_mutation}) TP - FP\"\n",
     "\n",
     "print(group_b_tp_fp_chart.name)\n",
     "group_b_tp_fp_chart.head(10)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pick the most useful mutation (the one with the highest TP - FP)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1703,8 +1745,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make a confusion matrix for top feature in Group B"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1815,7 @@
        "1          31  6"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1793,8 +1842,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sort samples from Group A into Group B1 and B0"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2440,7 @@
        "90                      C48"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2414,51 +2470,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decision Tree Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C1 is classified as C\n",
-      "C10 is classified as NC\n",
-      "C30 is classified as NC\n",
-      "NC5 is classified as NC\n",
-      "NC15 is classified as NC\n"
+      "Our tree says C1 is classified as C\n",
+      "Our tree says C10 is classified as NC\n",
+      "Our tree says C30 is classified as NC\n",
+      "Our tree says NC5 is classified as NC\n",
+      "Our tree says NC15 is classified as NC\n",
+      "Correct: 3\n",
+      "Accuracy: 60.0%\n"
      ]
     }
    ],
    "source": [
     "# Decision Tree Classifier\n",
     "\n",
-    "# If S has mutation F then\n",
-    "# if S has mutation A\n",
-    "# then classify S as C\n",
-    "# else classify S as NC\n",
-    "# else\n",
-    "# if S has mutation B\n",
-    "# then classify S as C\n",
-    "# else classify S as NC\n",
-    "\n",
     "list_of_samples = [\"C1\", \"C10\", \"C30\", \"NC5\",\"NC15\"]\n",
     "\n",
     "#get sample data\n",
     "sample_data = data.loc[list_of_samples]\n",
     "\n",
+    "# keep track of how many we get correct\n",
+    "correct = 0\n",
+    "\n",
     "#make a prediction\n",
     "for sample in list_of_samples:\n",
     "    if sample_data[most_useful_mutation][sample] == 1:\n",
     "        if sample_data[group_a_most_useful_mutation][sample] == 1:\n",
-    "            print(f\"{sample} is classified as C\")\n",
+    "            print(f\"Our tree says {sample} is classified as C\")\n",
+    "            if sample.startswith('C'):\n",
+    "                correct += 1\n",
     "        else:\n",
-    "            print(f\"{sample} is classified as NC\")\n",
+    "            print(f\"Our tree says {sample} is classified as NC\")\n",
+    "            if sample.startswith('NC'):\n",
+    "                correct += 1\n",
     "    else:\n",
     "        if sample_data[group_b_most_useful_mutation][sample] == 1:\n",
-    "            print(f\"{sample} is classified as C\")\n",
+    "            print(f\"Our tree says {sample} is classified as C\")\n",
+    "            if sample.startswith('C'):\n",
+    "                correct += 1\n",
     "        else:\n",
-    "            print(f\"{sample} is classified as NC\")"
+    "            print(f\"Our tree says {sample} is classified as NC\")\n",
+    "            if sample.startswith('NC'):\n",
+    "                correct += 1\n",
+    "\n",
+    "print(f\"Correct: {correct}\")\n",
+    "print(f\"Accuracy: {(correct/len(list_of_samples))*100}%\")"
    ]
   }
  ],
