--- a/Activity5B/assignment5b.ipynb
+++ b/Activity5B/assignment5b.ipynb
@@ -998,7 +998,8 @@
     "            if sample.startswith('NC'):\n",
     "                total_tn += 1\n",
     "            else:\n",
-    "                total_fn += 1"
+    "                total_fn += 1\n",
+    "\n"
    ]
   },
   {
@@ -1013,6 +1014,16 @@
    "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total TP: 13\n",
+      "Total FP: 1\n",
+      "Total TN: 60\n",
+      "Total FN: 36\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1034,43 +1045,29 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>C</th>\n",
-       "      <th>NC</th>\n",
-       "      <th>Total</th>\n",
+       "      <th>Predicted Healthy</th>\n",
+       "      <th>Predicted Cancer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>C</td>\n",
+       "      <th>Actual Healthy</th>\n",
        "      <td>13</td>\n",
        "      <td>36</td>\n",
-       "      <td>49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NC</td>\n",
+       "      <th>Actual Cancer</th>\n",
        "      <td>1</td>\n",
        "      <td>60</td>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Total</td>\n",
-       "      <td>14</td>\n",
-       "      <td>96</td>\n",
-       "      <td>110</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           C  NC  Total\n",
-       "0      C  13  36     49\n",
-       "1     NC   1  60     61\n",
-       "2  Total  14  96    110"
+       "                Predicted Healthy   Predicted Cancer\n",
+       "Actual Healthy                 13                 36\n",
+       "Actual Cancer                   1                 60"
       ]
      },
      "execution_count": 9,
@@ -1081,12 +1078,13 @@
    "source": [
     "# make a confusion matrix with the results\n",
     "\n",
-    "actual_predicted_TP_FP_TN_FN = pd.DataFrame(columns=['', 'C', 'NC', 'Total'])\n",
-    "actual_predicted_TP_FP_TN_FN[''] = ['C', 'NC', 'Total']\n",
-    "actual_predicted_TP_FP_TN_FN['C'] = [total_tp, total_fp, total_tp + total_fp]\n",
-    "actual_predicted_TP_FP_TN_FN['NC'] = [total_fn, total_tn, total_fn + total_tn]\n",
-    "actual_predicted_TP_FP_TN_FN['Total'] = [total_tp + total_fn, total_fp + total_tn, total_tp + total_fp + total_fn + total_tn]\n",
-    "actual_predicted_TP_FP_TN_FN\n",
+    "print(f\"Total TP: {total_tp}\")\n",
+    "print(f\"Total FP: {total_fp}\")\n",
+    "print(f\"Total TN: {total_tn}\")\n",
+    "print(f\"Total FN: {total_fn}\")\n",
+    "\n",
+    "confusion_matrix = pd.DataFrame({'Predicted Healthy': [total_tp, total_fp], ' Predicted Cancer': [total_fn, total_tn]}, index=['Actual Healthy', 'Actual Cancer'])\n",
+    "confusion_matrix\n",
     "\n"
    ]
   },
@@ -1123,26 +1121,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>All Samples</th>\n",
-       "      <th>Accuracy (%)</th>\n",
-       "      <th>Sensitivity (%)</th>\n",
-       "      <th>Specificity (%)</th>\n",
-       "      <th>Percision (%)</th>\n",
-       "      <th>Miss Rate (%)</th>\n",
-       "      <th>FDR (%)</th>\n",
-       "      <th>FOR (%)</th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>All Samples</td>\n",
+       "      <td>Accuracy (%)</td>\n",
        "      <td>66.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sensitivity (%)</td>\n",
        "      <td>26.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Specificity (%)</td>\n",
        "      <td>98.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Percision (%)</td>\n",
        "      <td>92.86</td>\n",
-       "      <td>37.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Miss Rate (%)</td>\n",
+       "      <td>73.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>FDR (%)</td>\n",
        "      <td>7.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>FOR (%)</td>\n",
        "      <td>37.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1150,11 +1166,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   All Samples  Accuracy (%)  Sensitivity (%)  Specificity (%)  Percision (%)  \\\n",
-       "0  All Samples         66.36            26.53            98.36          92.86   \n",
-       "\n",
-       "   Miss Rate (%)  FDR (%)  FOR (%)  \n",
-       "0          37.50     7.14    37.50  "
+       "            Metric  Value\n",
+       "0     Accuracy (%)  66.36\n",
+       "1  Sensitivity (%)  26.53\n",
+       "2  Specificity (%)  98.36\n",
+       "3    Percision (%)  92.86\n",
+       "4    Miss Rate (%)  73.47\n",
+       "5          FDR (%)   7.14\n",
+       "6          FOR (%)  37.50"
       ]
      },
      "execution_count": 10,
@@ -1163,32 +1182,43 @@
     }
    ],
    "source": [
-    "final_table = pd.DataFrame(columns=['All Samples', 'Accuracy (%)', 'Sensitivity (%)', 'Specificity (%)', 'Percision (%)', 'Miss Rate (%)', 'FDR (%)', 'FOR (%)'])\n",
+    "# accuracy is how close a given set of measurements (observations or readings) are to their true value\n",
+    "accuracy = (total_tp + total_tn) / (total_tp + total_fp + total_tn + total_fn) * 100\n",
     "\n",
-    "final_table['All Samples'] = ['All Samples']\n",
+    "# sensitivity measures how well a test can identify true positives\n",
+    "sensitivity = total_tp / (total_tp + total_fn) * 100\n",
     "\n",
-    "# Accuracy = (TP + TN) / (TP + FP + TN + FN)\n",
-    "final_table['Accuracy (%)'] = (total_tp + total_tn) / (total_tp + total_fp + total_tn + total_fn) * 100\n",
+    "# specificity measures how well a test can identify true negatives\n",
+    "specificity = total_tn / (total_fp + total_tn) * 100\n",
     "\n",
-    "# Sensitivity = TP / (TP + FN)\n",
-    "final_table['Sensitivity (%)'] = total_tp / (total_tp + total_fn) * 100\n",
+    "# percision is how close the measurements are to each other\n",
+    "percision = total_tp / (total_tp + total_fp) * 100\n",
     "\n",
-    "# Specificity = TN / (FP + TN)\n",
-    "final_table['Specificity (%)'] = total_tn / (total_fp + total_tn) * 100\n",
+    "# miss rate = rate at which a system or model makes false negatives\n",
+    "miss_rate = total_fn / (total_fn + total_tp) * 100\n",
     "\n",
-    "# Percision = TP / (TP + FP)\n",
-    "final_table['Percision (%)'] = total_tp / (total_tp + total_fp) * 100\n",
+    "# false discovery rate = percentage of times a test incorrectly identifies a \"discovery\" or significant result.\n",
+    "fdr = total_fp / (total_fp + total_tp) * 100\n",
     "\n",
-    "# Miss Rate = FN / (FN + TN)\n",
-    "final_table['Miss Rate (%)'] = total_fn / (total_fn + total_tn) * 100\n",
+    "# false omission rate tells you how often the model mistakenly classified something as negative when it should have been positive\n",
+    "forr = total_fn / (total_fn + total_tn) * 100\n",
     "\n",
-    "# FDR = FP / (FP + TP)\n",
-    "final_table['FDR (%)'] = total_fp / (total_fp + total_tp) * 100\n",
+    "final_table = pd.DataFrame(columns=['Metric', 'Value'])\n",
     "\n",
-    "# FOR = FN / (FN + TN)\n",
-    "final_table['FOR (%)'] = total_fn / (total_fn + total_tn) * 100\n",
+    "final_table['Metric'] = ['Accuracy (%)', 'Sensitivity (%)', 'Specificity (%)', 'Percision (%)', 'Miss Rate (%)', 'FDR (%)', 'FOR (%)']\n",
     "\n",
-    "final_table "
+    "final_table['Value'] = [accuracy, sensitivity, specificity, percision, miss_rate, fdr, forr]\n",
+    "\n",
+    "final_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- With a 66% accuracy rate, I personally wouldnt trust this test alone currently\n",
+    "- the miss rate also scares me \n",
+    "    - i would rather get a false positive than a false negative"
    ]
   }
  ],
